# badger

./: .gitignore  LICENSE  README.md  pyproject.toml
badger/: __main__.py  badger.py  cli.py  providers.py  proxy.py  utilities.py
badger/proxy/: handler.py  proxy.py
badger_proxy/: badger.py  cli.py
badger_proxy/proxy/: handler.py
docs/: pypi.md
