[tool.poetry]
name = "badger"
version = "0.1"
description = "mDNS-based reverse proxy for naming services on a local network."
authors = ["Hugo Lundin <hugo@lundin.dev>"]
homepage = "https://github.com/hugolundin/badger"
repository = "https://github.com/hugolundin/badger"
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
badger = "badger.cli:badger"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
mitmproxy = "^8.0.0"
docker = "^5.0.3"
toml = "^0.10.2"
zeroconf = {git = "https://github.com/jstasiak/python-zeroconf", rev = "1aa7842ae0f914c10465ae977551698046406d55"}
coloredlogs = "^15.0.1"
setproctitle = {git = "https://github.com/dvarrazzo/py-setproctitle", rev = "06dfd8e07b9c387f07f55f9a53fff7c22ad2f68e"}
result = "^0.8.0"
watchdog = "^2.1.7"
netifaces = "^0.11.0"
click-extra = "^2.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
isort = "^5.10.1"
black = "^22.3.0"

[tool.black]
include = '\.pyi?$'
exclude = '''
    /(
        \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    )/
    '''

[tool.isort]
profile="black"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
length_sort=true
